<resources>
    <string name="app_name" translatable="false">PC Unlocker</string>
    <string name="action_settings">Settings</string>
    <string name="auth_text">Confirm Screenlock to unlock</string>
    <string name="unlock">Unlock</string>

    <string name="title_activity_settings">Settings</string>
    <string name="dummy_button">Exit</string>
    <string name="dummy_content">You first have to secure your device</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles" translatable="false">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values" translatable="false">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles" translatable="false">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values" translatable="false">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries" translatable="false">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values" translatable="false">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="servers_list_name">
        <item>Server 1</item>
    </string-array>

    <string-array name="servers_list_values">
        <item>1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="title_activity_device_not_secure">Device not secure</string>
    <string name="pref_server">Servers</string>
    <string name="server_list">Server List</string>
    <string name="title_activity_server_settings">Server Settings</string>
    <string name="default_name">Server name</string>
    <string name="title_activity_server_edit">Edit Server</string>
    <string name="default_desc">No description</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_unlock">Unlock</string>
    <string name="really_delete">Do you really want to delete this server?</string>
    <string name="delete">Delete</string>
    <string name="advanced_settings">Anvanced settings</string>
    <string name="port">Port number</string>
    <string name="desc_desc">Description</string>
    <string name="desc_ip">Server IP</string>

    <string name="unlock_notification_title_template">Unlock: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="unlock_notification_placeholder_text_template">You said %1$s and lorem ipsum dolor
        sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel semper
        venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis. Pellentesque
        vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper ornare lacus. Duis
        ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis viverra rhoncus sit amet
        nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="unlock_notification_tilte">Unlock Your PC</string>
</resources>
